Changed logo (for now), fixed header team name

--- a/Game_Design_Document/Packages.tex
+++ b/Game_Design_Document/Packages.tex
@@ -25,7 +25,7 @@
 \fancypagestyle{plain}
 	{
 	\fancyhf{}% Clear header/footer
-	\fancyhead[R]{Team Accio Niffler - Level Design Document}% Right header
+	\fancyhead[R]{Dying Hamsters - Game Design Document}% Right header
 	\fancyhead[L]{\includegraphics[width=2cm]{../Pictures/Unimi_logo.png}}% Left header
 	\fancyfoot[R]{\thepage}% Right footer
 	}
