--- a/Game_Design_Document/Game_Design_Document.tex
+++ b/Game_Design_Document/Game_Design_Document.tex
@@ -10,13 +10,13 @@
 \tableofcontents
 \pagebreak
 
-\include{Content/Vision_Statement}
-\include{Content/Audience}
-\include{Content/Legal_Analysis}
-\include{Content/Gameplay}
-\include{Content/Characters}
-\include{Content/Story}
-\include{Content/Media_List}
-\include{Content/Prototype}
+\input{Content/Vision_Statement}
+\input{Content/Audience}
+\input{Content/Legal_Analysis}
+\input{Content/Gameplay}
+\input{Content/Characters}
+\input{Content/Story}
+\input{Content/Media_List}
+\input{Content/Prototype}
 
 \end{document}
