pushed story and characters part

--- a/Game_Design_Document/Content/Prototype.tex
+++ b/Game_Design_Document/Content/Prototype.tex
@@ -1,5 +1,5 @@
 \section{Prototype}
 
-TODO
+In the prototype there will be only.. \textbf{TODO}: insert complete prototype description
 
 \pagebreak 
