Added file structure for Target audience section

--- a/Game_Design_Document/Game_Design_Document.tex
+++ b/Game_Design_Document/Game_Design_Document.tex
@@ -11,7 +11,7 @@
 \pagebreak
 
 \input{Content/Vision_Statement}
-\input{Content/Audience}
+\input{Content/Target}
 \input{Content/Legal_Analysis}
 \input{Content/Gameplay}
 \input{Content/Characters}
