--- a/Game_Design_Document/Content/Target.tex
+++ b/Game_Design_Document/Content/Target.tex
@@ -1,9 +1,9 @@
 \section{Audience, Platform, and Marketing}
 
-\input{Target/Audience}
-\input{Target/Platform}
-\input{Target/Sys_Requirements}
-\input{Target/Top_Performers}
-\input{Target/Feature_Comparison}
+\input{Content/Target/Audience}
+\input{Content/Target/Platform}
+\input{Content/Target/Sys_Requirements}
+\input{Content/Target/Top_Performers}
+\input{Content/Target/Feature_Comparison}
 
 \pagebreak 
