--- a/Game_Design_Document/Content/Vision_Statement.tex
+++ b/Game_Design_Document/Content/Vision_Statement.tex
@@ -1,6 +1,6 @@
 \section{Vision Statement}
 
-[GameTitle] is a top down 2D strategic puzzle game for up to 8 players. \\
+[TODO GameTitle] is a top down 2D strategic puzzle game for up to 8 players. \\
 
 Each player takes the role of a scavenger trying to get his hands on the treasure of the fallen city of Alexandria, a magical broom brimming with inconceivable powers. \\
 
@@ -8,7 +8,7 @@ This artifact, called the Broom, is stored into a crumbling secret laboratory; e
 
 The ways to get to the Broom are many: you can completely avoid the other scavengers, actively fight them, mislead them in their search or even cooperate with them if they're willing... only to stab them in their backs whenever they least expect it. \\
 
-Only one will be able to retrieve the artifact and escape the crumbling ruins of the secret laboratory in which it is stored, so players will need to plan ahead and think carefully about how to explore the perilous maze. \\
+Only the strongest will be able to retrieve the artifact and escape the crumbling ruins of the secret laboratory in which it is stored, so players will need to plan ahead and think carefully about how to explore the perilous maze. \\
 
 \subsection{Logline}
 
@@ -18,7 +18,7 @@ Only one will be able to retrieve the artifact and escape the crumbling ruins of
 
 \subsection{Look and Feel}
 
-The game features an overall cartoonish 2D style, in both the character and environment visual design. 
+The game features an overall pixelart 2D style, in both the character and environment visual design. 
 
 \fullwidthgraphicscaption{../Pictures/Concept/charDesign.png}{Character anime-like design}
 
@@ -42,16 +42,10 @@ under a "fog of war", players don't know what's in them. The rooms are randomly 
 around the starting area. One room will contain the magic broom: reaching that room is the winning
 condition of the game. (TODO: non avevamo rielaborato questo concetto con il prendere la scopa e scappare da un altra parte?) \\
 
-The game is structured in 3 phases: firstly, the players choose 2 actions between moving to an adjacent
-room, looking into an adjacent room, and pushing someone else in an adjacent room TODO: abbiamo piu azioni fattibili ora (planning phase);
-then all the chosen actions will happen one after the other following the player order, which will change at the end of every turn (action phase). After that in the third phase, all
-players who find themselves in the different room than the one they were in at the beginning of the turn,
-will have to solve a short puzzle game which type and complexity depends on the room type (puzzle phase). \\
+The game is structured in 3 phases: firstly, the players choose two between all the possible actions (cfr. Gameplay/Actions section)  (planning phase);
+then all the chosen actions will happen one after the other following the player order, which will change at the end of every turn (action phase). After that in the third phase, all players who find themselves in the different room than the one they were in at the beginning of the turn, will have to solve a short puzzle game which type and complexity depends on the room type (puzzle phase). \\
 
-Each room can have positive or negative effects. In the former, the positive effect is only applied if the
-player in that room manages to solve the puzzle. In the latter, the negative effect is only applied if the
-player in that room fails to solve the puzzle. All puzzles have a timer to ensure that the game proceeds. If
-the timer reaches zero, the puzzle is considered failed. 
+Most of the rooms can have effects on the player characters, some positive and some negative. In the former case, the positive effect is only applied if the player in that room manages to solve the puzzle. In the latter, the negative effect is only applied if the player in that room fails to solve the puzzle. All puzzles have a timer to ensure that the game proceeds. If the timer reaches zero, the puzzle is considered failed. 
 
 
 \pagebreak
