Added base text to target audience

--- a/Game_Design_Document/Content/Target.tex
+++ b/Game_Design_Document/Content/Target.tex
@@ -1,5 +1,7 @@
 \section{Audience, Platform, and Marketing}
 
+TODO : editare lo stile della section dato che e uguale a quello della subsection ed e brutto
+
 \input{Content/Target/Audience}
 \input{Content/Target/Platform}
 \input{Content/Target/Sys_Requirements}
