Game modes, equipment, statuses

--- a/Game_Design_Document/Content/Gameplay.tex
+++ b/Game_Design_Document/Content/Gameplay.tex
@@ -1,5 +1,8 @@
 \section{Gameplay}
 
+\input{Content/Gameplay/Equipment}
 \input{Content/Gameplay/Rooms}
+\input{Content/Gameplay/Puzzles}
+\input{Content/Gameplay/Statuses}
 
 \pagebreak 
