Added gameplay sections

--- a/Game_Design_Document/Content/Gameplay.tex
+++ b/Game_Design_Document/Content/Gameplay.tex
@@ -1,5 +1,14 @@
 \section{Gameplay}
+\input{Content/Gameplay/Overview}
+\input{Content/Gameplay/Gameplay_Description}
+\input{Content/Gameplay/Controls}
+\input{Content/Gameplay/Procedures}
+\input{Content/Gameplay/Interface}
+\input{Content/Gameplay/Rules}
+\input{Content/Gameplay/Winning_conditions}
+\input{Content/Gameplay/Modes}
 
+\subsection{Game Mechanics}
 \input{Content/Gameplay/Equipment}
 \input{Content/Gameplay/Rooms}
 \input{Content/Gameplay/Puzzles}
