--- a/Game_Design_Document/Content/Gameplay/Equipment.tex
+++ b/Game_Design_Document/Content/Gameplay/Equipment.tex
@@ -1,4 +1,4 @@
-\subsection{Equipment}
+\subsubsection{Equipment}
 
 
 \paragraph{Dagger} When held by a Character, adds the Thrust Action to that Character's Actions Pool.
