--- a/Game_Design_Document/Content/Gameplay/Rooms.tex
+++ b/Game_Design_Document/Content/Gameplay/Rooms.tex
@@ -1,4 +1,4 @@
-\subsection{Rooms}
+\subsubsection{Rooms}
 
 Check the Statuses section for an in-depth explanation of individual puzzles.
 Check the Puzzles section for an in-depth explanation of individual puzzles.
