--- a/Game_Design_Document/Content/Media_List.tex
+++ b/Game_Design_Document/Content/Media_List.tex
@@ -1,5 +1,132 @@
 \section{Media List}
 
-TODO
+\begin{tabular}{|m{3cm}|m{3cm}|m{7cm}|}
+	\hline
+	\textbf{Group} & \textbf{Media Type} & \textbf{Description}\\
+	\hline
+	 \textbf{Menu}& Image & 
+	 \begin{itemize}
+	 	\item Screen background
+	 	\item Title Image
+	 	\item Cursor sprite
+	 	\item Character icon
+	 	\item Achievement icon
+	 	\item Loading Image
+	 	\item Loading Icon
+	 \end{itemize}
+	 	\\
+    \hline
+     \textbf{In Game}& Image & 
+     \begin{itemize}
+     	\item In-game level structure
+     	\item Button
+     	\item Broom Sprite
+     	\item Dagger Sprite
+     	\item Empty Room Sprite
+     	\item Entrance Room Sprite
+     	\item Exit Room Sprite
+     	\item Death Room Sprite
+     	\item Broom Room Sprite
+     	\item Portal Room Sprite
+     	\item Gear Room Sprite
+     	\item Brooms Deposit Room Sprite
+     	\item Mine (OFF) Room Sprite
+     	\item Mine (ON) Room Sprite
+     	\item Trap (OFF) Room Sprite
+     	\item Trap (ON) Room Sprite
+     	\item Bomb Room Sprite
+     	\item Soundproof Room Sprite
+     	\item Camera Room Sprite
+     	\item Drone Room Sprite
+     	\item EMP Room Sprite
+     	\item Antiques Room Sprite
+     	\item Boulder Room Sprite
+     	\item Medical Room Sprite
+     	\item Laser Room Sprite
+     	\item Empty Room Sprite
+     	\item Retro Gaming Room Sprite
+     	\item Gravity Room Sprite
+     	\item Dark Room Sprite
+     	\item Pact Room Sprite
+     	\item Mind Room Sprite
+     	\item Vending Machine Room Sprite
+     	\item Victory Screen
+     	\item Defeat Screen
+     \end{itemize}
+     \\
+     \hline
+     \textbf{Characters}& Image & 
+     \begin{itemize}
+     	\item Fake Altruist Sprite
+     	\item Mighty Man Sprite
+     	\item Ninja Sprite
+     	\item Persuader Sprite
+     	\item Drone Sprite
+     \end{itemize}
+     \\
+     \hline
+     \textbf{HUD}& Image & 
+     \begin{itemize}
+     	\item Status Icon
+     	\item Normal Status Icon
+     	\item Injuried Status Icon
+     	\item Killed Status Icon
+     	\item Trapped Status Icon
+     	\item Blinded Status Icon
+     	\item Happy Status Icon
+     	\item Depressed Status Icon
+     	\item Weakened Status Icon
+     	\item Empowered Status Icon
+     	\item Lucky Status Icon
+     	\item Action Icon
+     	\item Move Icon
+     	\item Look Icon
+     	\item Heal Icon
+     	\item Push Icon
+     	\item Speak Icon
+     	\item Thrust Icon
+     	\item Weapon Icon
+     	\item Special Action Icon
+     \end{itemize}
+     \\
+     \hline
+     \textbf{SFX}& Sound & 
+     \begin{itemize}
+     	\item Menu's Music
+     	\item In-game's Music
+     	\item Injuried sound effect
+     	\item Killed sound effect
+		\item Empty Room sound effect
+		\item Entrance Room sound effect
+		\item Exit Room sound effect
+		\item Death Room sound effect
+		\item Broom Room sound effect
+		\item Portal Room sound effect
+		\item Gear Room sound effect
+		\item Brooms Deposit Room sound effect
+		\item Mine (OFF) Room sound effect
+		\item Mine (ON) Room sound effect
+		\item Trap (OFF) Room sound effect
+		\item Trap (ON) Room sound effect
+		\item Bomb Room sound effect
+		\item Soundproof Room sound effect
+		\item Camera Room sound effect
+		\item Drone Room sound effect
+		\item EMP Room sound effect
+		\item Antiques Room sound effect
+		\item Boulder Room sound effect
+		\item Medical Room sound effect
+		\item Laser Room sound effect
+		\item Empty Room sound effect
+		\item Retro Gaming Room sound effect
+		\item Gravity Room sound effect
+		\item Dark Room sound effect
+		\item Pact Room sound effect
+		\item Mind Room sound effect
+		\item Vending Machine Room sound effect
+     \end{itemize}
+     \\
+		
+\end{tabular}
 
 \pagebreak 
