--- a/Game_Design_Document/Content/Gameplay/Puzzles.tex
+++ b/Game_Design_Document/Content/Gameplay/Puzzles.tex
@@ -1,3 +1,33 @@
 \subsection{Puzzles}
 
+\paragraph{Jigsaw} But weirder (https://www.youtube.com/watch?v=ks3vbiCSmKI)
+
+\paragraph{Connect the Tubes} In a sqare grid, with an entrance point and an exit point, the Player has to arrange tubes in order to let a liquid move from the entrance to the exit.
+
+\paragraph{Connect the Gears} In a level with pre-defined pivot points, a starting pivot and an ending pivot, the Player has to arrange gears in order to transfer energy from the starting pivot to the ending one, connecting the gears so they make the next one rotate all the way to the gear on the ending pivot.
+
+\paragraph{Connect the Light} In a level with pre-defined prisms, a laser origin and a laser sensor, the Player has to rotate the prisms in order to make the laser reach the sensor through multiple bounces.
+
+\paragraph{Electrolyzer} From Rachet and Clank, (https://ratchetandclank.fandom.com/wiki/Electrolyzer), rotate the bridges to let electric orbs access them, until all electric orbs reached a bridge.
+
+\paragraph{Hacker} From Rachet and Clank, (https://ratchetandclank.fandom.com/wiki/Hacker) rotate a platform, destroy red things before they reach the outer circle.
+
+\paragraph{Decryptor} From Rachet and Clank, connect circuits by moving the ball so that it connects two isolated parts of the circuit. Let electric orbs flow to the end of the circuit.
+
+\paragraph{Rythm} A quick rythm game section; press certain buttons within a time treshold.
+
+\paragraph{Bullet hell} A quick bullet hell section; avoid the projectiles until the timer expires. 
+
+\paragraph{Precise movement} Inspired from Kingdom Come: Deliverance's lockpicking minigame, find the "sweet spot" of a rotating circle, then follow that sweet spot as the circle rotates 360°.
+
+\paragraph{Sokoban} classic sokoban/pokémon cave puzzle style, move boulders to open your way from the entrance to the exit
+
+\paragraph{Slippery sokoban} Pokémon frozen floor style puzzle, find the correct order of movements from the entrance to reach the exit while sliding on the floor until an obstacle is met.
+
+\paragraph{Hangman} Classic hangman with letters attempts, or Fallout 3 hacking minigame style, with a words pool and reporting how many coorect letters were in a wrong word chosen.
+
+\paragraph{Hanoi Tower} Shouldn't need an explanation.
+
+\paragraph{Invert tiles} Given a sequence of tiles, some on and some other off, changing the state of a platform changes the state for all its adjacent platforms. The game is won when all platforms are active. See Spyro's Spring Idols puzzle (https://www.youtube.com/watch?v=SGbjVeWdqms)
+
 \pagebreak
