--- a/Game_Design_Document/Content/Vision_Statement.tex
+++ b/Game_Design_Document/Content/Vision_Statement.tex
@@ -4,7 +4,7 @@
 
 Each player takes the role of a scavenger trying to get his hands on the treasure of the fallen city of Alexandria, a magical broom brimming with inconceivable powers. \\
 
-This artifact, called the Broom, is stored into a crumbling secret laboratory; each room of this complex hides a surprise: it could be a boon, to gain advantage over the others, or it could be a deadly trap. The players will need to solve a straightforward puzzle to get the reward or to avoid impending doom. \\
+This artifact, called the Broom, is stored into a crumbling secret laboratory; each room of which hides a surprise: it could be a boon, to gain advantage over the others, or it could be a deadly trap. The players will need to solve a straightforward puzzle to get the reward or to avoid impending doom. \\
 
 The ways to get to the Broom are many: you can completely avoid the other scavengers, actively fight them, mislead them in their search or even cooperate with them if they're willing... only to stab them in their backs whenever they least expect it. \\
 
