--- a/Game_Design_Document/Content/Target.tex
+++ b/Game_Design_Document/Content/Target.tex
@@ -1,6 +1,7 @@
 \section{Audience, Platform, and Marketing}
 
 TODO : editare lo stile della section dato che e uguale a quello della subsection ed e brutto
+TODO : Usare il fottutissimo accento sul verbo essere, terza persona singolare. Grazie
 
 \input{Content/Target/Audience}
 \input{Content/Target/Platform}
