Players in game modes

--- a/Game_Design_Document/Content/Gameplay/Game_Mechanics/Equipment.tex
+++ b/Game_Design_Document/Content/Gameplay/Game_Mechanics/Equipment.tex
@@ -6,7 +6,7 @@
 \paragraph{Fake Broom} The Player will not be able to tell it isn't the real Magic Broom. Its fakeness is only revealed when:
 
 \begin{itemize}
-	\item The Character holding it is Injured, as the real Magic Broom would teleport away.
+	\item The Character holding it gets Injured, as the real Magic Broom would teleport away.
 	\item The Character holding it reaches the Exit Room
 \end{itemize}
 
