--- a/Game_Design_Document/Content/Gameplay/Game_Modes.tex
+++ b/Game_Design_Document/Content/Gameplay/Game_Modes.tex
@@ -1,16 +1,16 @@
 \section{Game Modes}
 
-\subsection{Standard} //TODO how many players?
+\subsection{Standard} 
 A Free\-For\-All Mode with a single Winner.
 All the Characters start in the Entrance; they must find the Magic Broom and then reach the Exit Room.
 \paragraph{Victory Conditions} Only the Player whoose Character enters the Exit Room while holding the Magic Broom will win.
 
-\subsection{Teams} //TODO how many players?
-The Players are split into 2-4 Teams, all the Characters start in the Entrance.
+\subsection{Teams} 
+The Players are split into 2 eaven Teams of up to 4 Players each, or 4 Teams of 2 Players, all the Characters start in the Entrance.
 \paragraph{Victory Conditions} All the Players in a Team win as soon as one of the Team's Characters reaches the Exit Room while holding the Magic Broom.
 
 \subsection{Guards} //TODO how many players?
-Players are split in Scavengers Team and Guards Team.
+Players are split in Scavengers Team and Guards Team. There are 1-2 Guards (To be tested), the remaining Players are Scavengers.
 The Scavengers play as a Team in the Teams Game Mode.
 Each Player in the Guards team at the beginning of the game can choose any Room, look what it and its adjacent Rooms are; then choose one of those Rooms; his Character will start from that Room. The Guards Players don't know where the other Guards are starting.
 \paragraph{Victory Conditions} All the Players in the Scavengers Team win as soon as one of that Team's Characters reaches the Exit Room while holding the Magic Broom. All the players in the Guards Team win as soon as all the players in the Scavengers Team are Killed.
