Fixed Gameplay structure

--- a/Game_Design_Document/Content/Gameplay/Controls.tex
+++ b/Game_Design_Document/Content/Gameplay/Controls.tex
@@ -1,2 +1,7 @@
 \subsection{Controls}
 Controls of our game are point and click, so the user will need a mouse (or a touchpad screen) in order to play the game, just by pressing buttons or dragging the left mouse key when solving puzzles.\\
+
+\input{Content/Gameplay/Controls/Procedures}
+\input{Content/Gameplay/Controls/Interface}
+\input{Content/Gameplay/Controls/Rules}
+\input{Content/Gameplay/Controls/Winning_conditions}
