Fixed media list table display

--- a/Game_Design_Document/Content/Media_List.tex
+++ b/Game_Design_Document/Content/Media_List.tex
@@ -26,7 +26,6 @@
      	\item Entrance Room Sprite
      	\item Exit Room Sprite
      	\item Death Room Sprite
-     	\item Broom Room Sprite
      	\item Portal Room Sprite
      	\item Gear Room Sprite
      	\item Brooms Deposit Room Sprite
@@ -40,6 +39,15 @@
      	\item Drone Room Sprite
      	\item EMP Room Sprite
      	\item Antiques Room Sprite
+     \end{itemize}
+ 		\\
+\end{tabular}
+   	
+\pagebreak
+\begin{tabular}{|m{3cm}|m{3cm}|m{7cm}|}
+	\hline
+	\textbf{In Game}& Image & 
+	\begin{itemize}
      	\item Boulder Room Sprite
      	\item Medical Room Sprite
      	\item Laser Room Sprite
@@ -80,6 +88,15 @@
      	\item Lucky Status Icon
      	\item Action Icon
      	\item Move Icon
+    \end{itemize}
+	\\
+	\end{tabular}
+	
+	\pagebreak
+	\begin{tabular}{|m{3cm}|m{3cm}|m{7cm}|}
+	\hline
+	 \textbf{HUD}& Image & 
+	 \begin{itemize}
      	\item Look Icon
      	\item Heal Icon
      	\item Push Icon
@@ -100,7 +117,6 @@
 		\item Entrance Room sound effect
 		\item Exit Room sound effect
 		\item Death Room sound effect
-		\item Broom Room sound effect
 		\item Portal Room sound effect
 		\item Gear Room sound effect
 		\item Brooms Deposit Room sound effect
@@ -115,7 +131,16 @@
 		\item EMP Room sound effect
 		\item Antiques Room sound effect
 		\item Boulder Room sound effect
-		\item Medical Room sound effect
+		\item Medical Room sound effect	
+	\end{itemize}
+	\\
+	\end{tabular}
+	
+	\pagebreak
+	\begin{tabular}{|m{3cm}|m{3cm}|m{7cm}|}
+	\hline
+	\textbf{SFX}& Sound & 
+	\begin{itemize}
 		\item Laser Room sound effect
 		\item Empty Room sound effect
 		\item Retro Gaming Room sound effect
@@ -124,9 +149,11 @@
 		\item Pact Room sound effect
 		\item Mind Room sound effect
 		\item Vending Machine Room sound effect
-     \end{itemize}
-     \\
-		
-\end{tabular}
+	
+     \end{itemize}\\
+     \hline
+\end{tabular}	
+
+
 
 \pagebreak 
