Changed some terms

--- a/Game_Design_Document/Content/Characters.tex
+++ b/Game_Design_Document/Content/Characters.tex
@@ -11,44 +11,11 @@ There are 4 categories:\\
 Moreover, there is only one NPC (The \textbf{Drone}) that is controllable by the player that solves the \textbf{Drone room}.
 \textbf{TODO}: insert concept art 
 
-\subsection{(Fake) Altruist}
-The category of altruists is the least widespread among the descendants of Alexandria 51. In a government based on prevailing over others, altruists are the classic good-hearted heroes who help others only to see them happy ... or at least, that is what they want you to believe! They are very devious people,
-trying to take advantage of their fake grace. Helping the enemy is part of their strategy. You can be sure they will betray your trust when you least expect it!\\
-The altruist shows up as an esteemed and respectable person, of the upper middle class. A tender face that hides a cruel personality.\\\\
-Their in-game special ability is  \textit{"Spontaneous Help"}:
-\begin{itemize}
-\item Once per game you can \textbf{Heal} a damaged enemy as an extra free-cost action. The enemy, however, is \textbf{Trapped} for the next turn.
-\end{itemize}
-\textbf{TODO}: insert concept art
-\subsection{Mighty Man}
-Alexandria 51 was full of these subjects. A lethal combination of organized crime, physical prowess and… stupidity. Their passion for the gym, the cybernetic advanced arms, the number of tattoos and scars represent the main hallmark of this category, as well as obviously their limited intellectual ability.\\
-Why are they so stupid? It is the high price to pay for Alexandria's technological progress (and it is also a very effective cliché)!\\\\
 
-Their special ability is \textit{"Show off your muscles"}:
-\begin{itemize}
-\item Once per game you can choose to be \textbf{Empowered} but you will be \textbf{Weakened} for the next 2 turns.
-\end{itemize}
-\textbf{TODO}: insert concept art
-
-\subsection{Ninja}
-The Ninja category is only mastered by the valiant Alexandrians of the Okada dynasty. Ninja arts have been handed down for generations, but with the rapid technological advancement in Alexandria their power has become less and less influential in society. Ninjas have their greatest ability in the speed of execution, which often saves them from disastrous situations. They know they are cool, but no one admires them anymore. Their goal is to be full of admirers again to obtain the respect and gratitude they deserve.\\\\
-Their special ability is \textit{"Just in time"}:
-\begin{itemize}
-\item The first time (in a game) that a trap would bring you to the state of \textbf{Injured}, you dodge it.\textbf{TODO}: fix this
-\end{itemize}
-\textbf{TODO}: insert concept art
-\subsection{Persuader}
-
-The policy of Alexandria 51 was based on the persuaders. It is the real reason that led the city to rapid technological advancement. Cynical and ruthless, they do not look anyone in the face. They take advantage of the weakest to gain immediate benefit. They would be able to extract every little and confidential information from you and then use it against you. They are real strategists… albeit not too tall.\\\\
-Their special ability is \textit{"Politician"}:
-\begin{itemize}
-\item Once per game you can force another player to share two of his known rooms with you. This player will be forced to use the \textbf{Speak} action as a second action for the next turn (with a random text visible to other enemies). \textbf{TODO}: fix this
-\end{itemize}
-\textbf{TODO}: insert concept art
-
-
-
-
+\input{Content/Characters/Altruist}
+\input{Content/Characters/Mighty_Man}
+\input{Content/Characters/Ninja}
+\input{Content/Characters/Persuader}
 
 
 \pagebreak 
