--- a/Game_Design_Document/Content/Gameplay/Controls/Rules.tex
+++ b/Game_Design_Document/Content/Gameplay/Controls/Rules.tex
@@ -2,7 +2,9 @@
 The game proceeds cycling in phases. We have 3 phases:
 \begin{itemize}
 \item Choosing Phase: all the players choose their next turn actions based on their status that affects the quantity/type of actions that he can perform.
-\item Executing Phase: all the actions are evaluated following a given players order. This order change turn by turn.
+\item Executing Phase: all the actions are evaluated following a given players order. This order change turn by turn in rotation order, changing which player is evaluated first.
 \item Puzzle Phase: all the players that enter for the first time in an undiscovered room 
 \end{itemize}
-If the player dies while holding the Magic Broom, the killer will get it.\\
+If a player dies all his equipment ( including, eventually, the Broom ) is dropped in the floor of his current room. The first player to enter the room automatically takes all the equipment. \\
+If the player was killed by another player, all his equipment is transferred to the killer. \\
+ 
