--- a/Game_Design_Document/Content/Gameplay/Controls/Winning_conditions.tex
+++ b/Game_Design_Document/Content/Gameplay/Controls/Winning_conditions.tex
@@ -1,2 +1,2 @@
 \subsubsection{Winning conditions}
-In all the game modes the first player who reach the Exit room while holding the magic broom wins the game.
+In all the game modes the prerequisite to win is always having the Magic Broom. More detailed description in \textbf{Game Modes} section.\\
