--- a/Game_Design_Document/Content/Gameplay/Gameplay_Description.tex
+++ b/Game_Design_Document/Content/Gameplay/Gameplay_Description.tex
@@ -1,5 +1,5 @@
 \subsection{Gameplay Description}
-The player enters the lobby and play a game with a certain class (chosen for his avatar when he registers into the game), then waits until the game starts. The game starts only when 8 players are found. At the start of the match every player starts in the center room with the “Normal” status, so they are able to perform 2 actions per turn.\\
+The player enters the lobby and play a game with a certain class (chosen for his avatar when he registers into the game), he queue in a specific game mode and then waits until the game starts. The game starts only when 6/8 players (depending on the game mode) are found. At the start of the match every player starts in the center room with the “Normal” status, so they are able to perform 2 actions per turn.\\
 Every turn the player chooses 2 actions to perform among all the possible actions. Those actions are evaluated in a given player order but the starting player changes randomly every turn. The player can also use, once per match, his class special ability that will be a third free-to-use action for that turn.\\
-When the player enters for the first time in a room a minigame starts and the player have 1 minute to solve it. If he wins the puzzle, he will activate the positive effect of the room in which he lands, otherwise he will activate the negative effect. Those rooms effects can change players’ statuses that will affect their ability to perform actions. \\
+When the player ends up for the first time in a room a minigame starts and the player have 1 minute to solve it. If he wins the puzzle, he will activate the positive effect of the room in which he lands, otherwise he will activate the negative effect. Those rooms effects can change players’ statuses that will affect their ability to perform actions. \\
 The goal of the player is to reach the magical broom before the others and find the Exit room, while trying to obstacle the other players and/or eventually kill them.\\
