--- a/Game_Design_Document/Content/Gameplay.tex
+++ b/Game_Design_Document/Content/Gameplay.tex
@@ -4,5 +4,6 @@
 \input{Content/Gameplay/Controls}
 \input{Content/Gameplay/Game_Modes}
 \input{Content/Gameplay/Game_Mechanics}
+\input{Content/Gameplay/Achievements}
 
 \pagebreak 
