--- a/Game_Design_Document/Content/Gameplay/Game_Mechanics/Statuses.tex
+++ b/Game_Design_Document/Content/Gameplay/Game_Mechanics/Statuses.tex
@@ -2,11 +2,11 @@
 
 \subsubsection{Life related}
 
-\paragraph{Injured} If the Character receives the Injured status once more, ot becomes Killed. 
+\paragraph{Injured} If the Character receives the Injured status once more, it becomes Killed. 
 If the Character held the Magic Broom upon receiving this status, it teleports to an random unoccupied room. 
 If the Character held a fake Broom upon receiving this status, it is revealed as fake.
 
-\paragraph{Killed} The Character is out of the game, can perform no actions. All its held items disappear.
+\paragraph{Killed} The Character is out of the game, can perform no actions. All its held items are dropped in the current Room.
 If the Character held the Magic Broom upon receiving this status, it teleports to an random unoccupied room. 
 
 \subsubsection{Actions related}
