Fixing some leftovers issues and pictures rename

--- a/Game_Design_Document/Content/Target.tex
+++ b/Game_Design_Document/Content/Target.tex
@@ -1,7 +1,6 @@
 \section{Audience, Platform, and Marketing}
 
-TODO : editare lo stile della section dato che e uguale a quello della subsection ed e brutto
-TODO : Usare il fottutissimo accento sul verbo essere, terza persona singolare. Grazie
+TODO: va bene lo stile ora?
 
 \input{Content/Target/Audience}
 \input{Content/Target/Platform}
