Added concept art for characters

--- a/Game_Design_Document/Content/Characters.tex
+++ b/Game_Design_Document/Content/Characters.tex
@@ -9,11 +9,16 @@ There are 4 categories:\\
 	\item Persuaders
 \end{itemize}
 Moreover, there is only one NPC (The \textbf{Drone}) that is controllable by the player that solves the \textbf{Drone room}.
-\textbf{TODO}: insert concept art 
 
+\fullwidthgraphics{../Pictures/Concept/Drone.png}
+
+\clearpage
 
 \input{Content/Characters/Altruist}
 \input{Content/Characters/Mighty_Man}
+
+\clearpage
+
 \input{Content/Characters/Ninja}
 \input{Content/Characters/Persuader}
 
