--- a/Game_Design_Document/Content/Characters/Mighty_Man.tex
+++ b/Game_Design_Document/Content/Characters/Mighty_Man.tex
@@ -1,4 +1,7 @@
 \subsection{Mighty Man}
+
+\sidewrapgraphics{../Pictures/Concept/Characters/Mighty_front.png}{20}
+
 Alexandria 51 was full of these subjects. A lethal combination of organized crime, physical prowess and… stupidity. Their passion for the gym, the cybernetic advanced arms, the number of tattoos and scars represent the main hallmark of this category, as well as obviously their limited intellectual ability.\\
 Why are they so stupid? It is the high price to pay for Alexandria's technological progress (and it is also a very effective cliché)!\\\\
 
@@ -6,4 +9,3 @@ Their special ability is \textit{"Show off your muscles"}:
 \begin{itemize}
 \item Once per game you can choose to be \textbf{Empowered} but you will be \textbf{Weakened} for the next 2 turns.
 \end{itemize}
-\textbf{TODO}: insert concept art
