--- a/Game_Design_Document/Content/Characters/Ninja.tex
+++ b/Game_Design_Document/Content/Characters/Ninja.tex
@@ -1,7 +1,11 @@
 \subsection{Ninja}
-The Ninja category is only mastered by the valiant Alexandrians of the Okada dynasty. Ninja arts have been handed down for generations, but with the rapid technological advancement in Alexandria their power has become less and less influential in society. Ninjas have their greatest ability in the speed of execution, which often saves them from disastrous situations. They know they are cool, but no one admires them anymore. Their goal is to be full of admirers again to obtain the respect and gratitude they deserve.\\\\
+
+\sidewrapgraphics{../Pictures/Concept/Characters/Ninja_front.png}{20}
+
+The Ninja category is only mastered by the valiant Alexandrians of the Okada dynasty. Ninja arts have been handed down for generations, but with the rapid technological advancement in Alexandria their power has become less and less influential in society. \\
+Ninjas have their greatest ability in the speed of execution, which often saves them from disastrous situations. They know they are cool, but no one admires them anymore. Their goal is to be full of admirers again to obtain the respect and gratitude they deserve.\\\\
 Their special ability is \textit{"Tryharding"}:
 \begin{itemize}
 \item Once per game you can choose to have immediately the positive effect of the next Room visited ( automatically winning the Puzzle ). \\\textbf{TODO:} fixed now?
 \end{itemize}
-\textbf{TODO}: insert concept art
+
