25/05 deadline Michael, large todos completed

--- a/Game_Design_Document/Content/Gameplay/Achievements.tex
+++ b/Game_Design_Document/Content/Gameplay/Achievements.tex
@@ -1,4 +1,4 @@
-\subsection{Achievements}
+\subsection{Achievements and Prizes}
 
 Note: "Kill a Character" means causing a Character death by:
 \begin{itemize}
@@ -6,8 +6,23 @@ Note: "Kill a Character" means causing a Character death by:
 	\item Having it killed by a Mine (Active) Room set by yourself.
 	\item Pushing it in a Death Room.
 	\item Having it killed by a Rolling Rock triggered by yourself.
-	\item //TODO altro?
+	\item Having a Drone kill it after designating that Character as Target for that Drone.
 \end{itemize}
+
+The game will have Achievements and Prizes. Both grant a Steam Achievement to the player's Steam account the first time they're earned.
+Achievements can only be earned once and will grant a large amount of in-game currency once earned. Prizes can be earned multiple times, and each time grant a small amount of in-game currency.
+
+\subsubsection{Achievements}
+
+\paragraph{White Death} Kill a total of 259 Characters.
+\paragraph{Säkkijärven Polka} Turn a total of 1941 Mine (Active) Rooms into Mine (Inactive) Rooms.
+\paragraph{Mercator} Reveal the entirety of the Rooms a total of 1512 times.
+
+\paragraph{Good old Games} Win the Gaming Room a total of 2008 times.
+\paragraph{Rutabaga} Have your Character survive a Rolling Rock a total of 7 times
+\paragraph{Woah!} Have your Character Killed by a Rolling Rock triggered from yourself a total of 7 times.
+
+\subsubsection{Prizes}
 
 \paragraph{Reaper} Kill all the other Characters in a Free For All Match.
 \paragraph{Slaughter} Win a Team Match by having the entirety of the enemy Team Killed.
@@ -19,14 +34,3 @@ Note: "Kill a Character" means causing a Character death by:
 \paragraph{Terminator} Kill a Character targeting him with a Drone.
 \paragraph{Collateral} Have your Character Killed by a Drone connected to a Drone Room after you failed its minigame.
 
-\paragraph{Good old Games} Win the Gaming Room a total of 2008 times.
-
-History References
-\paragraph{White Death} Kill a total of 259 Characters.
-\paragraph{Säkkijärven Polka} Disarm a total of 1941 Mine (Active) Rooms.
-
-\paragraph{Mercator} Reveal the entirety of the Rooms a total of 1512 times.
-
-Crash Bandicoot references
-\paragraph{Rutabaga} Have your Character survive a Rolling Rock a total of 7 times
-\paragraph{Woah!} Have your Character Killed by a Rolling Rock triggered from yourself a total of 7 times.
