--- a/Game_Design_Document/Content/Gameplay/Game_Mechanics/Puzzles.tex
+++ b/Game_Design_Document/Content/Gameplay/Game_Mechanics/Puzzles.tex
@@ -10,9 +10,15 @@
 
 \paragraph{Electrolyzer} From Rachet and Clank, (https://ratchetandclank.fandom.com/wiki/Electrolyzer), rotate the bridges to let electric orbs access them, until all electric orbs reached a bridge.
 
+\centeredgraphics{../Pictures/Puzzles/R\&C_Electrolyzer.png}
+
 \paragraph{Hacker} From Rachet and Clank, (https://ratchetandclank.fandom.com/wiki/Hacker) rotate a platform, destroy red things before they reach the outer circle.
 
+\centeredgraphics{../Pictures/Puzzles/R\&C_Hacker.png}
+
 \paragraph{Decryptor} From Rachet and Clank, connect circuits by moving the ball so that it connects two isolated parts of the circuit. Let electric orbs flow to the end of the circuit.
+
+\centeredgraphics{../Pictures/Puzzles/R\&C_Decryptor.jpg}
 
 \paragraph{Rythm} A quick rythm game section; press certain buttons within a time treshold.
 
@@ -20,14 +26,26 @@
 
 \paragraph{Precise movement} Inspired from Kingdom Come: Deliverance's lockpicking minigame, find the "sweet spot" of a rotating circle, then follow that sweet spot as the circle rotates 360°.
 
+\centeredgraphics{../Pictures/Puzzles/Kingdom_Come_Deliverance_lockpick.jpg}
+
 \paragraph{Sokoban} classic sokoban/pokémon cave puzzle style, move boulders to open your way from the entrance to the exit
 
+\centeredgraphics{../Pictures/Puzzles/Pokemon_strength.jpg}
+
 \paragraph{Slippery sokoban} Pokémon frozen floor style puzzle, find the correct order of movements from the entrance to reach the exit while sliding on the floor until an obstacle is met.
+
+\centeredgraphics{../Pictures/Puzzles/Pokemon_ice.png}
 
 \paragraph{Hangman} Classic hangman with letters attempts, or Fallout 3 hacking minigame style, with a words pool and reporting how many coorect letters were in a wrong word chosen.
 
 \paragraph{Hanoi Tower} Shouldn't need an explanation.
 
 \paragraph{Invert tiles} Given a sequence of tiles, some on and some other off, changing the state of a platform changes the state for all its adjacent platforms. The game is won when all platforms are active. See Spyro's Spring Idols puzzle (https://www.youtube.com/watch?v=SGbjVeWdqms)
+
+\centeredgraphics{../Pictures/Puzzles/Spyro_Invert.jpg}
+
+\paragraph{Tiles Path} Given a sequence of tiles and a grid of tiles with a token to move through in 2 axis, the Player has to move the token on tiles that follow the given sequence. (See Hype: The Time Quest's Brigand's Hideout minigame, Path of Exile's minigame in The Lord's Labyrinth
+
+\centeredgraphics{../Pictures/Puzzles/Hype_tiles.png}
 
 \pagebreak
